test/private_proto_test/static_web/config.yaml
static_resources:
  listeners:
  - name: "s1"
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 9211
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          codec_type: auto
          http_protocol_options:
            accept_http_10: true
          #  allow_absolute_url: true
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                direct_response:
                  status: 200
                  body: {inline_string: "helloworld"}
          http_filters:
          - name: envoy.router
            typed_config: {}

admin:
  access_log_path: ./admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 9310}
